Fix balsamiq panel on firefox

--- a/src/components/balsamiq/panel/balsamiq_panel.css
+++ b/src/components/balsamiq/panel/balsamiq_panel.css
@@ -1,3 +1,4 @@
 .balsamiq_panel {
   background: url('./rectangle.svg') no-repeat;
+  background-size: 100% 100%;
 }
